Responsive dashboard cards

--- a/webui/templates/dashboard.html.j2
+++ b/webui/templates/dashboard.html.j2
@@ -10,8 +10,7 @@
 
     </p>
     {% for client in photon.clients.values() %}
-    <div class="col s4">
-
+    <div class="col s12 m6 l4">
         <div class="client card" data-id="{{ client.id }}">
             {% if client.image %}
             <div class="card-image">
