--- a/webui/templates/preview.html.j2
+++ b/webui/templates/preview.html.j2
@@ -13,11 +13,14 @@
 
 <script>
 async function refreshImage() {
-    setTimeout(refreshImage, 2000);
-    let img = document.getElementById('preview');
-    let response = await fetch('preview/frame');
-    let base64 = await response.text();
-    img.src = base64;
+    try {
+        let img = document.getElementById('preview');
+        let response = await fetch('preview/frame');
+        let base64 = await response.text();
+        img.src = base64;
+    } finally {
+        setTimeout(refreshImage, 2000);
+    }
 };
 refreshImage();
 </script>
