Error handling in frontend requests

--- a/webui/static/style.css
+++ b/webui/static/style.css
@@ -28,7 +28,9 @@ img {
     color: darkred;
 }
 
-.client.inactive .preview {
+.client.inactive .preview,
+.client.inactive .export
+ {
     display: none;
 }
 
