--- a/webui/templates/base.html.j2
+++ b/webui/templates/base.html.j2
@@ -15,7 +15,7 @@
     <div class="container">
         <p id="site-actions">
             <a href="{{ url_for('index') }}">Dashboard</a>
-            <a href="{{ url_for('get_archive') }}">Archive</a>
+            <a href="{{ url_for('replays') }}">Replays</a>
         </p>
 
         {% block content %}
