--- a/webui/templates/replays.html.j2
+++ b/webui/templates/replays.html.j2
@@ -1,9 +1,9 @@
 {% extends "base.html.j2" %}
 
 {% block content %}
-<div class="row" id="archive">
+<div class="row" id="replays">
 
-    <h1>Archive</h1>
+    <h1>Replays</h1>
 
     {% for file in files %}
     <div class="col m12 l6">
@@ -11,14 +11,14 @@
             <div class="row">
                 <div class="col m4">
                     {% if file.thumb %}
-                    <img class="thumb" src="{{ url_for('archive.static', filename=file.thumb_relative) }}">
+                    <img class="thumb" src="{{ url_for('replays.static', filename=file.thumb_relative) }}">
                     {% endif %}
                 </div>
                 <div class="col m8">
                     <p>{{ file.relative }}</p>
                     <p data-time="{{ file.date }}">{{ file.date }}</p>
                     <p>{{ file.group }}</p>
-                    <a href="{{ url_for('archive.static', filename=file.relative) }}" class="btn">Download</a>
+                    <a href="{{ url_for('replays.static', filename=file.relative) }}" class="btn">Download</a>
                 </div>
             </div>
         </div>
